      of the high-level graphics functions such as \code{boxplot()}, so
      that the plot is only displayed when the page is complete.

      Currently implemented for \code{windows(buffered = TRUE)},
      \code{quartz()} and the cairographics-based \code{X11()} types
      with buffering (which are the default on-screen devices).

      \item The default \code{colormodel} for \code{pdf()} and
      \code{postscript()} is now called \code{"srgb"} to more accurately
      describe it.  (Instead of \code{"rgb"}, and in the case of
      \code{postscript()} it no longer switches to and from the gray
      colorspace, by default.)

      The\code{colormodel} for \code{postscript()} which does use both
      gray and sRGB colorspace is now called \code{"srgb+gray"}.

      Plots which are known to use only black/white/transparent can
      advantageously use \code{colormodel = "gray"} (just as before, but
      there is now slightly more advantage in doing so).

      \item \code{postscript()} with values \code{colormodel = "rgb"} and
      \code{colormodel = "rgb-nogray"} give the behaviour prior to \R
      2.13.0 of uncalibrated RGB, which under some circumstances can be
      rendered much faster by a viewer.

      \code{pdf(colormodel = "rgb")} gives the behaviour prior to \R
      2.13.0 of uncalibrated RGB, which under some circumstances can be
      rendered faster by a viewer, and the files will be smaller (by
      about 9KB if compression is not used).

      \item The \code{postscript()} device only includes the definition
      of the sRGB colorspace in the output file for the colormodels
      which use it.

      \item The \code{postscript()} and \code{pdf()} devices now output
      greyscale raster images (and not RGB) when \code{colormodel = "gray"}.

      \item \code{postscript(colormodel = "gray")} now accepts non-grey
      colours and uses their luminance (as \code{pdf()} long has).
